syntax = "proto3";

package api;

enum Cmd{
	None =0;

	// local -> xcloud
	Handshake = 1;
	MultiSessionData      = 2;

	// xcloud -> local
	SessionHTTP      = 20;
	SessionConnect = 21;
	SessionClose   = 22;
	SessionUserBind   = 23;
	
	// xcloud <-> local
	SessionData      = 40;
}
 
message HandshakeRequest {
	string	appID     =1;
	string accessKey =2;
	string config=3;
}

message MultiSessionDataRequest{
	repeated string	sessionIDs =1;  
	bytes data      =2;
	}
  
message SessionHTTPNotify{
string	sessionID =1; 
string	path =2; 
	map<string,string> headers      =3;
	bytes body = 4;
}

message SessionHTTPNotifyResponse{
uint32	code =1;  
	map<string,string> headers      =2;
	bytes body = 3;
}

message SessionConnectNotify{
string	sessionID =1; 
	string openID      =2;
}

message SessionCloseNotify{
string	sessionID =1;  
}

message SessionUserBindNotify{
string	sessionID =1;  
string openID      =2;
}

message SessionDataBiNotify{
string	sessionID =1;  
bytes data      =2;
}