syntax = "proto3";

package xcloudapis;

option go_package = "github.com/anson-xcloud/xdp-demo/xcloud/apis";

message Peer {
  string sid = 1;
  string appid = 2;

  // below invalid for user session
  string openid = 3;
  string network = 4;
  string addr = 5;
  bool authorized = 6;
}

message Request {
  string api = 1;
  string version = 2;
  Peer source = 3; // source and target once will used only one
  Peer target = 4;
  map<string, string> headers = 5;
  bytes body = 6;
}

message Response { bytes body = 1; }

// message MultiMessage {
//   repeated Remote remotes = 1;
//   Data data = 2;
// }

message ServiceRegisterRequest {
  string id = 1;
  int32 rid = 2;
  string token = 3;
  bool agent = 4;
  string config = 5;
}

message ServiceRegisterResponse { int32 rid = 1; }

enum ServiceStatus {
  ServiceStatusNone = 0;
  ServiceStatusRunning = 1;
  ServiceStatusSuspend = 2;
}

message ServiceSuspendRequest {
  string id = 1;
  uint32 status = 2;
}

message ServiceResumeRequest {
  string id = 1;
  uint32 status = 2;
}

message ServiceStateRequest {
  string id = 1;
  uint32 status = 2;
}
